--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -5583,6 +5583,7 @@
    "cell_type": "markdown",
    "id": "31c2e87f-65a1-4a68-ba9f-29107b7f115f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -6856,9 +6857,12 @@
   {
    "cell_type": "markdown",
    "id": "5142880e-c79e-442a-b3ae-a961fbc315e7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "## 287. Find the Duplicate Number (medium)"
+    "### 287. Find the Duplicate Number (medium)**"
    ]
   },
   {
@@ -6875,22 +6879,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "a47ea33a-faec-4f46-987e-7eb644ef5a63",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# attempt"
+    "# attempt\n",
+    "class Solution:\n",
+    "    def findDuplicate(self, nums: [int]) -> int:\n",
+    "        \n",
+    "        for n in nums:\n",
+    "            for i in range(len(nums)):\n",
+    "                if n != i and nums[n] == nums[i]:\n",
+    "                    return nums[n]\n",
+    "                \n",
+    "# status = failure\n",
+    "# NOTE: obvious brute force, TLE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "id": "cb2a5aba-afb4-4d9e-b945-b75f1280054a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "class Solution:\n",
+    "    def findDuplicate(self, nums: [int]) -> int:\n",
+    "        \n",
+    "        for n in nums:\n",
+    "            f = lambda x: x==n\n",
+    "            filt = list(filter(f, nums))\n",
+    "            if len(filt) > 1:\n",
+    "                return n\n",
+    "\n",
+    "# status = failure\n",
+    "# NOTE: TLE\n",
+    "# NOTE: really don't know how to make use of linked list here..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "ef8e6099-1d50-448b-923e-cef55f7854f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# solution"
+    "# solution\n",
+    "class Solution:\n",
+    "    def findDuplicate(self, nums: [int]) -> int:\n",
+    "        slow, fast = 0, 0\n",
+    "        while True:\n",
+    "            slow = nums[slow]\n",
+    "            fast = nums[nums[fast]]\n",
+    "            if slow == fast:\n",
+    "                break\n",
+    "\n",
+    "        slow2 = 0\n",
+    "        while True:\n",
+    "            slow = nums[slow]\n",
+    "            slow2 = nums[slow2]\n",
+    "            if slow == slow2:\n",
+    "                return slow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "251456da-71ee-44aa-957a-99d0c5f87a8b",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: this is a bit of a bs problem, but once again it uses the turtoise and hare (floyd's algorithm) approach. there idea here is to use floyd's algorithm to find a cycle (linked list concept). the first part of the solution is used to find where the slow and fast pointer intersect at (you're now in the cycle). the second part is to find where exactly the cycle begins (the index of this intersection is the duplicate number)"
    ]
   }
  ],
