--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# SQL Leetcode \n",
     "\n",
-    "this notebook is intended to be used to practice SQL through individual questions, as well as gather notes on common topics, best practices, and any information that is new to me. studying SQL courses does not seem to be very effective for various reasons (slow, repetitive but information doesn't seem to stick, boring); trying this approach instead. will attempt to implement what is learned in projects further down the line. \n",
+    "this notebook is intended to be used to practice SQL (MySQL) through individual questions, as well as gather notes on common topics, best practices, and any information that is new to me. studying SQL courses does not seem to be very effective for various reasons (slow, repetitive but information doesn't seem to stick, boring); trying this approach instead. will attempt to implement what is learned in projects further down the line. \n",
     "\n",
     "have not currently found a way to format this notebook nicely, so mostly only using markdown cells. doesn't look great but will do for now"
    ]
@@ -28,6 +28,7 @@
    "cell_type": "markdown",
    "id": "fd6d3bed-a20a-4eba-bca6-41af6d5b606e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -90,7 +91,7 @@
     "tags": []
    },
    "source": [
-    "#### <u>attempt</u>"
+    "#### <u>attempts</u>"
    ]
   },
   {
@@ -100,11 +101,30 @@
     "tags": []
    },
    "source": [
-    "want a left join\n",
+    "NOTE: need a left join\n",
     "\n",
     "    SELECT person.firstName, person.LastName, address.city, address.state\n",
     "    FROM Person person\n",
     "    LEFT JOIN Address address ON person.personId = address.personId "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5440ae1-b28c-4810-921b-788beaf5c0c7",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd1d0b65-0b92-42ab-88cc-d7e19b36e855",
+   "metadata": {},
+   "source": [
+    "from someone on leetcode, haven't seen this before\n",
+    "\n",
+    "    SELECT firstname, lastname, city, state FROM person\n",
+    "    LEFT JOIN address USING(personid)"
    ]
   },
   {
@@ -160,6 +180,119 @@
     "    RIGHT JOIN table2 b ON a.id = b.id;\n",
     "   \n",
     "**the above code on the FULL JOIN is from GPT and has not been tested... take with a grain of salt**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f84c539e-2eae-49aa-9ad0-b3bf5c7cc43d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 181. Employees Earning More Than Their Managers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2dc2c3a-ce29-423a-a7ca-cfcc648dbd6f",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85fb0468-738a-4107-aa66-dcd17265667b",
+   "metadata": {},
+   "source": [
+    "Table: Employee\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | name        | varchar |\n",
+    "    | salary      | int     |\n",
+    "    | managerId   | int     |\n",
+    "    +-------------+---------+\n",
+    "\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table indicates the ID of an employee, their name, salary, and the ID of their manager.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the employees who earn more than their managers.\n",
+    "\n",
+    "Return the result table in any order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0749e073-6ed5-45d9-8195-385d2844fc43",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c14546d8-14dc-4153-ba2e-1139e3b7e827",
+   "metadata": {},
+   "source": [
+    "NOTE: aliases didn't seem necessary in problem 175, but this problem seems to highlight their importance\n",
+    "\n",
+    "    SELECT \n",
+    "        e1.name AS Employee\n",
+    "    FROM \n",
+    "        Employee e1\n",
+    "    JOIN \n",
+    "        Employee e2 ON e1.managerId = e2.id\n",
+    "    WHERE \n",
+    "        e1.salary > e2.salary;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bba314f-bd9b-4f99-bdcc-9e12f6e95183",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56a52eac-f55a-4de2-a1ee-c666e4e82d78",
+   "metadata": {},
+   "source": [
+    "from leetcode, slightly different approach - no joins seem necessary\n",
+    "\n",
+    "    SELECT e1.name AS Employee\n",
+    "    FROM Employee e1, Employee e2\n",
+    "    WHERE e1.managerId = e2.id AND e1.salary > e2.salary;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48a48067-81a6-442c-8a51-f31676589cd3",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f111cf49-0a43-4d09-b7c8-94131a87a8b2",
+   "metadata": {},
+   "source": [
+    "explanation of the attempt: To solve this problem, you can use a self-join on the Employee table to compare each employee's salary with their manager's salary.\n",
+    "\n",
+    "* Employee e1 is an alias for the employee table to represent the employees.\n",
+    "* Employee e2 is an alias for the employee table to represent the managers.\n",
+    "* The JOIN clause matches each employee (e1) with their manager (e2) by comparing e1.managerId with e2.id.\n",
+    "* The WHERE clause filters the results to include only those employees whose salary (e1.salary) is greater than their manager's salary (e2.salary).\n",
+    "* The SELECT clause returns the names of the employees who meet the condition.\n",
+    "\n",
+    "This query will return the employees who earn more than their managers, as specified in the problem statement"
    ]
   },
   {
