--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -105,7 +105,9 @@
     "\n",
     "    SELECT person.firstName, person.LastName, address.city, address.state\n",
     "    FROM Person person\n",
-    "    LEFT JOIN Address address ON person.personId = address.personId "
+    "    LEFT JOIN Address address ON person.personId = address.personId \n",
+    "    \n",
+    "status = success"
    ]
   },
   {
@@ -248,7 +250,9 @@
     "    JOIN \n",
     "        Employee e2 ON e1.managerId = e2.id\n",
     "    WHERE \n",
-    "        e1.salary > e2.salary;"
+    "        e1.salary > e2.salary;\n",
+    "        \n",
+    "status = success"
    ]
   },
   {
@@ -294,6 +298,258 @@
     "\n",
     "This query will return the employees who earn more than their managers, as specified in the problem statement"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e092163-a06c-435e-9dc8-46d4867b9225",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 182. Duplicate Emails"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af1977fd-36dd-4157-ad2b-2462853b2627",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3bc0d16-d954-49b3-bbcf-11673b168913",
+   "metadata": {},
+   "source": [
+    "Table: Person\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | email       | varchar |\n",
+    "    +-------------+---------+\n",
+    "\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains an email. The emails will not contain uppercase letters.\n",
+    " \n",
+    "\n",
+    "Write a solution to report all the duplicate emails. Note that it's guaranteed that the email field is not NULL.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e94a6afe-205d-43de-bba7-79ebe0ffa5aa",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fed2055e-0a3e-4ff4-bb34-771df231af21",
+   "metadata": {},
+   "source": [
+    "NOTE: haven't used the HAVING keyword before\n",
+    "\n",
+    "    SELECT email FROM Person\n",
+    "    GROUP BY email\n",
+    "    HAVING COUNT(email) > 1\n",
+    "    \n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81dc610a-3e94-4a3e-b65d-a062ffa2749f",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "074dc97b-9857-4fd3-886c-ca5aef148cb8",
+   "metadata": {},
+   "source": [
+    "this seemed like another popular solution, but doesn't make a whole lot of sense to me...\n",
+    "\n",
+    "    SELECT DISTINCT P1.Email FROM Person P1,Person P2 \n",
+    "    WHERE P1.id <> P2.id AND P1.Email=P2.Email\n",
+    "    \n",
+    "here's a breakdown:\n",
+    "1. FROM Person P1, Person P2:\n",
+    "\n",
+    "    * This creates two references to the Person table, named P1 and P2. This technique is known as a self-join, where the table is joined with itself.\n",
+    "\n",
+    "2. WHERE P1.id <> P2.id:\n",
+    "\n",
+    "    * This condition ensures that the join is not comparing the same row with itself by checking that the id of P1 is different from the id of P2.\n",
+    "\n",
+    "3. AND P1.Email = P2.Email:\n",
+    "\n",
+    "    * This condition ensures that the email addresses in the two rows being compared are the same. This means we are finding pairs of rows where the email is the same but the IDs are different.\n",
+    "\n",
+    "4. SELECT DISTINCT P1.Email:\n",
+    "\n",
+    "    * SELECT DISTINCT is used to ensure that the result contains unique email addresses. Even if an email appears multiple times as a duplicate in different pairs, it will only be listed once in the result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46b85d52-bbbd-44a6-93d6-4b692d1ff352",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc416d3c-5054-4d17-a116-0b367dccae26",
+   "metadata": {},
+   "source": [
+    "difference between HAVING and WHERE: The HAVING and WHERE clauses in SQL are both used to filter data, but they are used in different contexts and for different purposes. Here are the key differences:\n",
+    "\n",
+    "1. Usage Context:\n",
+    "\n",
+    "    * WHERE Clause: The WHERE clause is used to filter rows before any grouping operations are performed. It is applied to individual rows in a table.\n",
+    "    * HAVING Clause: The HAVING clause is used to filter groups after the GROUP BY operation has been performed. It is applied to aggregated data.\n",
+    "    \n",
+    "2. Filtering Rows vs. Filtering Groups\n",
+    "     * WHERE Clause: Filters individual rows based on specified conditions. It cannot be used with aggregate functions (like COUNT, SUM, AVG, etc.) directly. But a WHERE clause can be used before a GROUP BY \n",
+    "     * HAVING Clause: Filters groups of rows created by the GROUP BY clause based on aggregate function conditions.\n",
+    "     \n",
+    "3. Execution Order:\n",
+    "\n",
+    "    * WHERE Clause: Applied early in the execution process, right after the FROM clause.\n",
+    "    * HAVING Clause: Applied later in the execution process, after the GROUP BY clause and any aggregate functions.\n",
+    "    \n",
+    "example\n",
+    "\n",
+    "-- Using WHERE clause to filter rows\n",
+    "\n",
+    "    SELECT product, amount\n",
+    "    FROM Sales\n",
+    "    WHERE amount > 100;\n",
+    "\n",
+    "-- Using HAVING clause to filter groups\n",
+    "\n",
+    "    SELECT region, SUM(amount) AS total_sales\n",
+    "    FROM Sales\n",
+    "    GROUP BY region\n",
+    "    HAVING total_sales > 500;\n",
+    "\n",
+    "* The first query uses the WHERE clause to filter individual sales records where the amount is greater than 100.\n",
+    "* The second query uses the HAVING clause to filter regions where the total sales (SUM(amount)) exceed 500."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23891029-ea98-4160-b40d-2bece22ed4f3",
+   "metadata": {},
+   "source": [
+    "### 183. Customers Who Never Order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e25bfc6e-7c2d-4828-aaae-41141def3895",
+   "metadata": {},
+   "source": [
+    "#### <u>descriptions</u> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "602ad271-e65a-461f-bf56-6b9ac2a88889",
+   "metadata": {},
+   "source": [
+    "Table: Customers\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | name        | varchar |\n",
+    "    +-------------+---------+\n",
+    "    \n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table indicates the ID and name of a customer.\n",
+    " \n",
+    "\n",
+    "Table: Orders\n",
+    "\n",
+    "    +-------------+------+\n",
+    "    | Column Name | Type |\n",
+    "    +-------------+------+\n",
+    "    | id          | int  |\n",
+    "    | customerId  | int  |\n",
+    "    +-------------+------+\n",
+    "    \n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "customerId is a foreign key (reference columns) of the ID from the Customers table.\n",
+    "Each row of this table indicates the ID of an order and the ID of the customer who ordered it.\n",
+    " \n",
+    "\n",
+    "Write a solution to find all customers who never order anything.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a047729-192f-445d-be50-34fc788bd9ae",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dfa84de-26e2-40f6-b4b1-120c9aa94578",
+   "metadata": {},
+   "source": [
+    "did a right join initially but that didn't make sense because that causes me to lose the names, so have to do left join again\n",
+    "\n",
+    "    SELECT name AS Customers\n",
+    "    FROM Customers table1\n",
+    "    LEFT JOIN Orders table2 ON table1.id = table2.customerId\n",
+    "    WHERE table2.id IS NULL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cded4a74-4887-4c0d-ab3c-bd6a1bc6dbd5",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc8438e7-587d-47a8-8526-70bcbae5d781",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34afcef8-089b-4bc4-ac4e-e5f9440172dd",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc2c5dd3-8f2d-4749-91e4-5a14693a1891",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
