--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -303,6 +303,7 @@
    "cell_type": "markdown",
    "id": "9e092163-a06c-435e-9dc8-46d4867b9225",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -448,7 +449,10 @@
   {
    "cell_type": "markdown",
    "id": "23891029-ea98-4160-b40d-2bece22ed4f3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 183. Customers Who Never Order"
    ]
@@ -511,12 +515,14 @@
    "id": "3dfa84de-26e2-40f6-b4b1-120c9aa94578",
    "metadata": {},
    "source": [
-    "did a right join initially but that didn't make sense because that causes me to lose the names, so have to do left join again\n",
+    "NOTE: did a right join initially but that didn't make sense because that causes me to lose the names, so have to do left join again\n",
     "\n",
     "    SELECT name AS Customers\n",
     "    FROM Customers table1\n",
     "    LEFT JOIN Orders table2 ON table1.id = table2.customerId\n",
-    "    WHERE table2.id IS NULL"
+    "    WHERE table2.id IS NULL\n",
+    "    \n",
+    "status = success"
    ]
   },
   {
@@ -528,12 +534,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc8438e7-587d-47a8-8526-70bcbae5d781",
+   "cell_type": "markdown",
+   "id": "115a63a4-5eca-42ed-99f9-6bcfce9fbb07",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from someone on leetcode, more concise and even eaiser to read\n",
+    "\n",
+    "    SELECT name as Customers FROM Customers\n",
+    "    WHERE id NOT IN (SELECT customerid FROM orders)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,12 +553,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc2c5dd3-8f2d-4749-91e4-5a14693a1891",
+   "cell_type": "markdown",
+   "id": "834c5f8a-6151-40bb-869c-69f449328504",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "no notes as this time - this problem is fairly straightforward"
+   ]
   },
   {
    "cell_type": "markdown",
