--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -28,7 +28,6 @@
    "cell_type": "markdown",
    "id": "fd6d3bed-a20a-4eba-bca6-41af6d5b606e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -303,7 +302,6 @@
    "cell_type": "markdown",
    "id": "9e092163-a06c-435e-9dc8-46d4867b9225",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -450,7 +448,6 @@
    "cell_type": "markdown",
    "id": "23891029-ea98-4160-b40d-2bece22ed4f3",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -558,6 +555,114 @@
    "metadata": {},
    "source": [
     "no notes as this time - this problem is fairly straightforward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81b1c505-d82a-4d21-857d-73a33e95428c",
+   "metadata": {},
+   "source": [
+    "### 196. Delete Duplicate Emails"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24a9e1ab-23d4-4bf5-b5f5-62d1a4260888",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ffb3e2f-6482-4e0e-b2de-3bc0fdb2f010",
+   "metadata": {},
+   "source": [
+    "Table: Person\n",
+    "\n",
+    "    +-------------+---------+\n",
+    "    | Column Name | Type    |\n",
+    "    +-------------+---------+\n",
+    "    | id          | int     |\n",
+    "    | email       | varchar |\n",
+    "    +-------------+---------+\n",
+    "    \n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains an email. The emails will not contain uppercase letters.\n",
+    " \n",
+    "\n",
+    "Write a solution to delete all duplicate emails, keeping only one unique email with the smallest id.\n",
+    "\n",
+    "For SQL users, please note that you are supposed to write a DELETE statement and not a SELECT one.\n",
+    "\n",
+    "For Pandas users, please note that you are supposed to modify Person in place.\n",
+    "\n",
+    "After running your script, the answer shown is the Person table. The driver will first compile and run your piece of code and then show the Person table. The final order of the Person table does not matter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "791c46b4-eca1-4682-aab1-4d210c1d369f",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0b5861e-24a3-4aee-8042-91698b104aa8",
+   "metadata": {},
+   "source": [
+    "NOTE: a bit confused about the WHERE statement; was sure that the condition was t1.id < t2.id since you want to keep the smallest id. same logic for id in the solutions... there's something about the table layout that i don't get from the join\n",
+    "\n",
+    "    DELETE t1 FROM Person t1 \n",
+    "    INNER JOIN Person t2 \n",
+    "    WHERE t1.id > t2.id AND t1.email = t2.email"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c218816d-92a3-4290-8e31-e4450e6961f5",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2469fc5c-5898-412c-8874-275e709003cd",
+   "metadata": {},
+   "source": [
+    "tried to write this but kept failing; need to review syntax\n",
+    "\n",
+    "    DELETE p1 FROM Person p1,Person p2 \n",
+    "    WHERE p1.email=p2.email AND p1.id>p2.id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac5a192f-284c-437b-99fb-090b4df217a2",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2b072d6-0d68-4c31-95b9-05d0bc5e500c",
+   "metadata": {},
+   "source": [
+    "would be useful to have a visual view of the table after the inner join so i can understand why that where clause work. explanation:\n",
+    "\n",
+    "\n",
+    "**Why t1.id > t2.id?**\n",
+    "\n",
+    "When there are duplicate rows in the table, we need to choose one of the duplicates to delete. The WHERE t1.id > t2.id condition is used to ensure that we always delete the record with the higher id value and keep the record with the lower id value. This is a consistent and deterministic way to remove duplicates because:\n",
+    "\n",
+    "1. Consistency: By always deleting the record with the higher id, we ensure that only one of the duplicates remains. If we used t1.id < t2.id, it would still remove duplicates, but the specific record being deleted would be different (it would be the one with the lower id), which is less intuitive in terms of preserving the original order of insertion.\n",
+    "\n",
+    "2. Efficiency: Deleting the record with the higher id can be seen as preserving the \"first\" instance of each duplicate (assuming id is an auto-incrementing primary key). This is often desirable because it maintains the earliest inserted record.\n",
+    "\n"
    ]
   },
   {
