--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -28,6 +28,7 @@
    "cell_type": "markdown",
    "id": "fd6d3bed-a20a-4eba-bca6-41af6d5b606e",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -302,6 +303,7 @@
    "cell_type": "markdown",
    "id": "9e092163-a06c-435e-9dc8-46d4867b9225",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -448,6 +450,7 @@
    "cell_type": "markdown",
    "id": "23891029-ea98-4160-b40d-2bece22ed4f3",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -560,7 +563,10 @@
   {
    "cell_type": "markdown",
    "id": "81b1c505-d82a-4d21-857d-73a33e95428c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 196. Delete Duplicate Emails"
    ]
@@ -617,7 +623,9 @@
     "\n",
     "    DELETE t1 FROM Person t1 \n",
     "    INNER JOIN Person t2 \n",
-    "    WHERE t1.id > t2.id AND t1.email = t2.email"
+    "    WHERE t1.id > t2.id AND t1.email = t2.email\n",
+    "    \n",
+    "status = success"
    ]
   },
   {
@@ -663,6 +671,156 @@
     "\n",
     "2. Efficiency: Deleting the record with the higher id can be seen as preserving the \"first\" instance of each duplicate (assuming id is an auto-incrementing primary key). This is often desirable because it maintains the earliest inserted record.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e74e2b84-4c5e-40a9-a1b4-8cadcbe3d6fb",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "### 197. Rising Temperature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd0fb48b-1bb5-4bc6-bc36-aa161aaa9fa1",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52440e87-cad3-466b-8201-cdbb22352504",
+   "metadata": {},
+   "source": [
+    "Table: Weather\n",
+    "\n",
+    "    +---------------+---------+\n",
+    "    | Column Name   | Type    |\n",
+    "    +---------------+---------+\n",
+    "    | id            | int     |\n",
+    "    | recordDate    | date    |\n",
+    "    | temperature   | int     |\n",
+    "    +---------------+---------+\n",
+    "    \n",
+    "id is the column with unique values for this table.\n",
+    "There are no different rows with the same recordDate.\n",
+    "This table contains information about the temperature on a certain day.\n",
+    " \n",
+    "\n",
+    "Write a solution to find all dates' Id with higher temperatures compared to its previous dates (yesterday).\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "699296d2-4bc1-427c-a48b-5e80a8662b82",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0319499e-43cc-47fe-a75e-3d356fccba19",
+   "metadata": {},
+   "source": [
+    "NOTE: this almost works, but fails if there are gaps between dates...\n",
+    "\n",
+    "    SELECT t2.id FROM (\n",
+    "        SELECT *,\n",
+    "        LAG (temperature, 1)\n",
+    "        OVER (ORDER BY recordDate ASC) AS previous_temp\n",
+    "        FROM Weather\n",
+    "    ) AS t2\n",
+    "    WHERE temperature > previous_temp\n",
+    "    \n",
+    "status = failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aacbd4e4-938e-4150-97a2-a0c2e024855c",
+   "metadata": {},
+   "source": [
+    "NOTE: the idea here was create 2 lagged columns, one for temperature and one for recordDate. in order for an id to be selected, the current temperature had to be greater than the previous one, and the interval between the current day and the previous day had to be exactly 1 day (to ensure the previous record was indeed yesterday). also beats 99.50% of users apparently\n",
+    "\n",
+    "    SELECT t2.id FROM (\n",
+    "        SELECT *,\n",
+    "        LAG (temperature, 1)\n",
+    "        OVER (ORDER BY recordDate ASC) AS previous_temp,\n",
+    "        LAG (recordDate, 1)\n",
+    "        OVER (ORDER BY recordDate ASC) AS previous_date\n",
+    "        FROM Weather\n",
+    "    ) AS t2\n",
+    "    WHERE temperature > previous_temp AND DATE_SUB(recordDate, INTERVAL 1 DAY) = previous_date\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "723653de-f47b-413b-af6f-458e6533ee5f",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b70e6ea-92b3-4311-8bef-f3a58c5a8d6c",
+   "metadata": {},
+   "source": [
+    "solution from someone on leetcode, a lot more straightforward, but not as fast as mine apparently\n",
+    "\n",
+    "    SELECT w1.id\n",
+    "    FROM Weather w1, Weather w2\n",
+    "    WHERE DATEDIFF(w1.recordDate, w2.recordDate) = 1 AND w1.temperature > w2.temperature;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdde4e91-e889-4348-be3e-37141cf6725a",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "572e7716-2144-42eb-8181-b5cc1f1b1d34",
+   "metadata": {},
+   "source": [
+    "using 2 new functions in my successful attempt: LAG() and DATE_SUB()\n",
+    "\n",
+    "LAG():\n",
+    "\n",
+    "The LAG() window function facilitates access to previous rows based on the offset argument. It can be particularly useful when a comparison of a previous value is necessary without the use of a self join. There is a similarity to the LEAD() function with the difference being the accessible rows. LEAD() accesses subsequent rows while LAG() accesses previous rows.\n",
+    "\n",
+    "    LAG (expression [, offset] [, default])\n",
+    "    OVER ( [ partition_by ] order_by )\n",
+    "\n",
+    "    1. expression - The column value which will be referenced.\n",
+    "    2. offset - A positive numeric indicator of the previous row to access that is relative to the current row. If not specified the default is 1.\n",
+    "    3. default - The value that will be returned if the offset is out of range. This is an optional argument, if not specified NULL will be returned.\n",
+    "\n",
+    "    1. partition_by - Allows the result set to be grouped based on a column. This is an optional argument, if not specified the result set will be treated as a single group.\n",
+    "    2. order_by - Determines the order of the result set. If partition_by is specified, it will order the grouped data instead.\n",
+    "    \n",
+    "DATE_SUB():\n",
+    "\n",
+    "The DATE_SUB() function subtracts a time/date interval from a date and then returns the date.\n",
+    "\n",
+    "    DATE_SUB(date, INTERVAL value interval)\n",
+    "     \n",
+    "    1. date - Required. The date to be modified\n",
+    "    2. value - Required. The value of the time/date interval to subtract. Both positive and negative values are allowed\n",
+    "    3. interval - Required. The type of interval to subtract. Can be one of the following values"
    ]
   },
   {
