--- a/sqleetcode.ipynb
+++ b/sqleetcode.ipynb
@@ -825,6 +825,103 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c3499e7-86d5-44df-be75-11be65ef1b1b",
+   "metadata": {},
+   "source": [
+    "### 511. Game Play Analysis I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b767f8-ea4d-4fcb-a0ad-4096d8f89e84",
+   "metadata": {},
+   "source": [
+    "#### <u>description</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a617c43-bc19-4d31-9717-314359fc9171",
+   "metadata": {},
+   "source": [
+    "Table: Activity\n",
+    "\n",
+    "    +--------------+---------+\n",
+    "    | Column Name  | Type    |\n",
+    "    +--------------+---------+\n",
+    "    | player_id    | int     |\n",
+    "    | device_id    | int     |\n",
+    "    | event_date   | date    |\n",
+    "    | games_played | int     |\n",
+    "    +--------------+---------+\n",
+    "\n",
+    "(player_id, event_date) is the primary key (combination of columns with unique values) of this table.\n",
+    "This table shows the activity of players of some games.\n",
+    "Each row is a record of a player who logged in and played a number of games (possibly 0) before logging out on someday using some device.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the first login date for each player.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f260d8a-0502-4c1a-b97f-322504c10c41",
+   "metadata": {},
+   "source": [
+    "#### <u>attempts</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8ba046d-a0e7-493d-92ec-c44fbac76685",
+   "metadata": {},
+   "source": [
+    "NOTE: not entirely sure why this works. without the GROUP BY, it only returns a single row which contains the minimum date from the event_date column. possible i fail to really understand what a group by actually does at this stage\n",
+    "\n",
+    "    SELECT player_id, MIN(event_date) as first_login\n",
+    "    FROM Activity\n",
+    "    GROUP BY player_id\n",
+    "\n",
+    "status = success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c5735f5-929d-482b-a1a4-818ebb2f2129",
+   "metadata": {},
+   "source": [
+    "#### <u>solutions</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2b9f061-88b6-40c7-b3af-fcc995520895",
+   "metadata": {},
+   "source": [
+    "there doesn't seem to be much else to this problem. simple problem but worth keeping in mind"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29ad7011-5c8f-45ea-ac12-67fa3bcd3b80",
+   "metadata": {},
+   "source": [
+    "#### <u>notes</u>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02b7d6b0-07dd-45af-aeab-7d95ad3a22a7",
+   "metadata": {},
+   "source": [
+    "this is the explanation from GPT concerning the GROUP BY: \n",
+    "* GROUP BY player_id: This groups the result by player_id, ensuring that the MIN(event_date) is calculated for each player individually."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d01b4a7-355f-4546-97b3-78fbdd7d2992",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
